# shadevolution

./: .editorconfig  .gitignore  LICENSE.txt  README.md  main.py  pyproject.toml  requirements.txt
resources/programs/: fresnel.glsl
resources/scenes/: crate.mtl
shadevolution/: app.py  evaluator.py  fresnel.py  gp.py  models.py  parser.py  plot.py  shader.py
